test/negative/604_index_dim_mismatch.fx
// expect: dimension
val a = [1, 2, 3]
val b = a[0, 1]
println(b)
